Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/CRM_Address_Event_Out__e.object-meta.xml
<CustomObject>
    <description>Platform event published from Salesforce for Address insert and updates, which will be consumed by Kafka</description>
    <label>CRM Address Event - Out</label>
    <pluralLabel>CRM Address Events - Out</pluralLabel>
</CustomObject>