Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/accountID__c.field-meta.xml
<CustomField>
    <fullName>accountID__c</fullName>
    <label>accountID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>