Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/address3__c.field-meta.xml
<CustomField>
    <fullName>address3__c</fullName>
    <label>address3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>