Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/addressID__c.field-meta.xml
<CustomField>
    <fullName>addressID__c</fullName>
    <label>addressID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>