Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/addressType__c.field-meta.xml
<CustomField>
    <fullName>addressType__c</fullName>
    <label>addressType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>