Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/author__c.field-meta.xml
<CustomField>
    <fullName>author__c</fullName>
    <label>author</label>
    <length>40</length>
    <type>Text</type>
</CustomField>