Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/eventSource__c.field-meta.xml
<CustomField>
    <fullName>eventSource__c</fullName>
    <defaultValue>&apos;SFDC&apos;</defaultValue>
    <label>eventSource</label>
    <length>25</length>
    <type>Text</type>
</CustomField>