Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/isLocked__c.field-meta.xml
<CustomField>
    <fullName>isLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLocked</label>
    <type>Checkbox</type>
</CustomField>