Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/isPrimary__c.field-meta.xml
<CustomField>
    <fullName>isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>