Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/parentSystemOfOriginID__c.field-meta.xml
<CustomField>
    <fullName>parentSystemOfOriginID__c</fullName>
    <label>parentSystemOfOriginID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>