Prod-EU/force-app/main/default/objects/CRM_Address_Event_Out__e/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>